[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Objects/Circuit/NodalStepOne.png" type="Texture" id=1]
[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/Puzzles/Chapter IV/NodalAnalysis/NodeVoltage.gd" type="Script" id=3]
[ext_resource path="res://Resources/Objects/Elements/CircuitNode/CircuitNode.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="NodeVoltage" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Background" parent="." index="0"]
color = Color( 0.32549, 0.32549, 0.32549, 1 )

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( 164.76, 93.42 )
scale = Vector2( 0.418, 0.418 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="." index="3"]
margin_left = 12.0
margin_top = 9.0
margin_right = 52.0
margin_bottom = 23.0
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeVoltages" type="Node2D" parent="." index="4"]

[node name="V1" type="Button" parent="NodeVoltages" index="0"]
margin_left = 131.0
margin_top = 46.0
margin_right = 145.0
margin_bottom = 60.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="NodeVoltages/V1" index="0"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 7.44336, 7.44434 )
scale = Vector2( 0.0121103, 0.0121103 )
texture = ExtResource( 4 )

[node name="V2" type="Button" parent="NodeVoltages" index="1"]
margin_left = 214.0
margin_top = 46.0
margin_right = 228.0
margin_bottom = 60.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="NodeVoltages/V2" index="0"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 7.44531, 7.44434 )
scale = Vector2( 0.0121103, 0.0121103 )
texture = ExtResource( 4 )

[node name="V3" type="Button" parent="NodeVoltages" index="2"]
margin_left = 131.0
margin_top = 128.0
margin_right = 145.0
margin_bottom = 142.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="NodeVoltages/V3" index="0"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 7.44531, 7.44336 )
scale = Vector2( 0.0121103, 0.0121103 )
texture = ExtResource( 4 )

[node name="V4" type="Button" parent="NodeVoltages" index="3"]
margin_left = 214.0
margin_top = 128.0
margin_right = 228.0
margin_bottom = 142.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/normal = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="NodeVoltages/V4" index="0"]
visible = false
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 7.44531, 7.44336 )
scale = Vector2( 0.0121103, 0.0121103 )
texture = ExtResource( 4 )
[connection signal="pressed" from="NodeVoltages/V1" to="." method="_on_V1_pressed"]
[connection signal="pressed" from="NodeVoltages/V2" to="." method="_on_V2_pressed"]
[connection signal="pressed" from="NodeVoltages/V3" to="." method="_on_V3_pressed"]
[connection signal="pressed" from="NodeVoltages/V4" to="." method="_on_V4_pressed"]
